# planc

./: .gitignore  Makefile.am  configure.ac  database.c  database.h  dmenu.c  dmenu.h  download.c  download.h  ext_url.c  gmenu.c  history.c  history.h  libdatabase.c  libdatabase.h  libdomain.c  libdomain.h  libpolicy.c  main.c  main.cpp  main.h  plan.c  plan.h  priv.dis.planc.gschema.xml  settings.c  settings.h  uri.c  uri.h
GTK3/: Makefile.am  configure.ac  database.c  database.h  download.c  download.h  history.c  history.h  main.c  main.h  menu.c  planc.desktop  priv.dis.browser.gschema.xml  priv.dis.planc.gschema.xml  settings.c  settings.h
m4/: .gitignore
src/: .gitignore  astyleo  dmenu.c  dmenu.h  download.c  gmenu.h  libdatabase.c  libdomain.c  libdomain.h  libpolicy.c  main.c  settings.c
wxWidgets/: Makefile  Makefile.in  aclocal.m4  browser  browsertest.cbp  browsertest.depend  config.h  config.h.in  config.status  configure  configure.ac  libtool  main.cpp  main.cpp.bak  main.h
wxWidgets/autom4te.cache/: output.0  output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
